--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="main">
+  <!-- <div class="main"> -->
   <form [formGroup]="dobForm">
     <div class="row">
       <mat-form-field appearance="fill">
